<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button1"
            android:textSize="@dimen/textSize"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button2"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button3"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/buttonMultiply"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button4"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button5"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button6"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/buttonDiv"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button7"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button8"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button9"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/buttonSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/buttonSum"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/button0"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/buttonPt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/buttonPt"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/buttonRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/buttonRes"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/marginHor"
            android:text="@string/buttonMinus"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
</LinearLayout>
